# RunGPT

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  FRAMEWORK_GUIDE.md  LICENSE  MANIFEST.in  README.md  SDK_USAGE_GUIDE.md  env.example  pyproject.toml  setup.py  test_retry.py
examples/: 01_basic_chat.py  02_tool_calling.py  02_tool_usage.py  03_react_agent.py  04_memory_management.py  04_planner_executor.py  05_custom_model.py  05_memory_usage.py  06_custom_model.py  06_streaming_output.py  07_streaming.py  07_workflow_linear.py  08_plan_execute.py  08_workflow_routing.py  09_structured_output.py  09_workflow_parallel.py  10_workflow_plan_execute.py  README.md
rungpt/: CLAUDE.md  __init__.py
rungpt/agent/: CLAUDE.md  __init__.py  agent_base.py  agent_factory.py  executor_agent.py  parser_utils.py  plan_execute_agent.py  planner_agent.py  react_agent.py  react_parser.py  simple_agent.py  structured_output.py
rungpt/agent/parsers/: __init__.py  bracket_parser.py  function_parser.py  json_parser.py  parser_manager.py  robust_parser.py  strategy.py
rungpt/context/: __init__.py  context_manager.py  prompt_template.py  skill_injector.py  token_manager.py  tool_injector.py
rungpt/context/prompts/: agent_executor.txt  agent_planexecute.txt  agent_planner.txt  agent_react.txt  agent_simple.txt
rungpt/models/: __init__.py  model_interface.py  model_registry.py  unified_provider.py
rungpt/threads/: __init__.py  memory_manager.py  thread.py
rungpt/tools/: CLAUDE.md  __init__.py  registry.py  result.py  schema.py  tool.py  validators.py
rungpt/workflow/: CLAUDE.md  __init__.py  core.py  patterns.py  steps.py
